fix: update password pattern and align visibility icon in password fields

--- a/abasta-app/src/components/auth/ResetPasswordForm/ResetPasswordForm.scss
+++ b/abasta-app/src/components/auth/ResetPasswordForm/ResetPasswordForm.scss
@@ -46,6 +46,14 @@
         outline: none;
         box-shadow: none;
       }
+
+      .invalid-feedback {
+        margin-top: 0.25rem;
+      }
+
+      .form-control.is-invalid {
+        background-image: none;
+      }
     }
   }
 }
@@ -65,12 +73,6 @@
   display: block;
   font-size: 0.875rem;
   margin-top: 0.25rem;
-}
-
-.password-wrapper {
-  .invalid-feedback {
-    margin-top: 0.25rem;
-  }
 }
 
 @media (max-width: 576px) {
